# pleasehitthecorner

./: CMakeLists.txt
.cache/clangd/index/: _fixes.hpp.6B9E6A127EA2DFBC.idx  _vectorize.hpp.6B5A2D97E18BE1F7.idx  common.hpp.001C536CDC05F4BC.idx  compute_common.hpp.6BEB6F03B56321B7.idx  compute_vector_decl.hpp.B64C5A06C1D6DF64.idx  compute_vector_relational.hpp.352E95437272A71C.idx  constants.hpp.D712A719E790A2B7.idx  constants.inl.60F7E6EF43309E26.idx  epsilon.hpp.FBE3A17194851FA5.idx  epsilon.inl.2BB03EC46DE27754.idx  exponential.hpp.CA8586A8C9F346A2.idx  func_common.inl.12B04EFD416137AC.idx  func_exponential.inl.5B1D50122F017A59.idx  func_geometric.inl.2E4D81952483655B.idx  func_integer.inl.E8DDE96B9D36A4E1.idx  func_matrix.inl.2A6A5DF98D517B2F.idx  func_packing.inl.795240342FC21D06.idx  func_trigonometric.inl.3C61E63A70B55F76.idx  func_vector_relational.inl.7CEDAE39E716D4D0.idx  fwd.hpp.BF03EAC87F1D3CA9.idx  geometric.hpp.621AE53273E01346.idx  glad.c.21D07C3B4399AD6B.idx  glad.c.D7A4790965C21184.idx  glad.h.42BE171A3FC4FFA0.idx  glad.h.9650D6A0BD6AF971.idx  glad.h.D3980E1E367A881C.idx  glfw3.h.836233305D583FDD.idx  glfw3.h.C2B901E975CA4DE3.idx  glm.hpp.87DEA895D0BDCF59.idx  integer.hpp.9DD17F99EFBF58A0.idx  khrplatform.h.356A2B5A21062660.idx  khrplatform.h.A3F11FD4492A36D4.idx  khrplatform.h.C9F439D5A76D9E37.idx  main.cpp.26672047024AE4B5.idx  main.cpp.27189C6C68E06395.idx  mat2x2.hpp.8F97F99AA2F98942.idx  mat2x3.hpp.7AD2893DA60BC556.idx  (+164 more)
includes/: shader.hpp
includes/glad/: glad.h
src/: glad.c  main.cpp  shader.cpp
src/shaders/: shader.frag  shader.vert
